<resources>
    <string name="app_name">My Application</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string-array name="tab_title">
        <item>Product</item>
        <item>Stock</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">edit</string>
    <string name="name">name</string>
    <string name="price">price</string>
    <string name="stock">stock</string>
    <string name="submit">submit</string>
    <string name="delete">delete</string>
</resources>