<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="22dp"
    tools:context=".EditActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edittext_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_border"
        android:hint="@string/name"
        android:padding="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edittext_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edittext_border"
            android:hint="@string/price"
            android:inputType="number"
            android:padding="8dp" />

        <View
            android:layout_width="12dp"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edittext_stock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/stock"
            android:inputType="number"
            android:background="@drawable/edittext_border"
            android:padding="8dp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/submit" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/button_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColor="#777777"
        android:text="@string/delete" />

</LinearLayout>